force-app/main/default/objects/plaunch__Common_Objection_Link__c/plaunch__Common_Objection_Link__c.object-meta.xml
<CustomObject>
    <description>Links of common objections to scenario and scripts</description>
    <label>Common Objection Link</label>
    <nameField>
        <label>Common Objection Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Common Objection Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>