force-app/main/default/objects/plaunch__Common_Objection_Link__c/fields/plaunch__Common_Objection__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Common_Objection__c</fullName>
    <label>Common Objection</label>
    <referenceTo>plaunch__Common_Objection__c</referenceTo>
    <relationshipLabel>Common Objection Links</relationshipLabel>
    <relationshipName>Common_Objection_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>