force-app/main/default/objects/plaunch__Common_Objection_Link__c/fields/plaunch__ScriptAndPitch_Scenario__c.field-meta.xml
<CustomField>
    <fullName>plaunch__ScriptAndPitch_Scenario__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ScriptAndPitch Scenario</label>
    <referenceTo>plaunch__ScriptAndPitch_Scenario__c</referenceTo>
    <relationshipLabel>Common Objection Links</relationshipLabel>
    <relationshipName>Common_Objection_Links</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>