force-app/main/default/objects/plaunch__Common_Objection_Link__c/fields/plaunch__ScriptAndPitch_Script__c.field-meta.xml
<CustomField>
    <fullName>plaunch__ScriptAndPitch_Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ScriptAndPitch Script</label>
    <referenceTo>plaunch__ScriptAndPitch_Script__c</referenceTo>
    <relationshipLabel>Common Objection Links</relationshipLabel>
    <relationshipName>Common_Objection_Links</relationshipName>
    <type>Lookup</type>
</CustomField>